--- a/app/code/Codilar/ProShopping/view/frontend/templates/popup.phtml
+++ b/app/code/Codilar/ProShopping/view/frontend/templates/popup.phtml
@@ -94,11 +94,7 @@
 
 
 <div <?php if($this->popupposition() == 0) { echo "class=share_box"; } else{ echo "class=share_box-right"; }?> <?php if($this->popupposition() == 0) { echo "id=pop_button"; } else{ echo "id=pop_button-right"; }?>>
-       <!-- <a href="#" class="pull_leftcontact" title="Click to Contact Us">Contact Us
-
-        </a> -->
-<!--        <img src="--><?php //echo $this->getViewFileUrl('Codilar_ProShopping::images/contact.png'); ?><!--">-->
-<p>Click Here!</p>
+        <img src="<?php echo $this->getViewFileUrl('Codilar_ProShopping::images/tss-t.png'); ?>">
 
 </div>
 
