--- a/app/code/Codilar/ProShopping/view/frontend/layout/default.xml
+++ b/app/code/Codilar/ProShopping/view/frontend/layout/default.xml
@@ -7,7 +7,11 @@
 	</head>
     <body>
         <referenceBlock name="after.body.start">
-            <block class="Codilar\ProShopping\Block\Contactblock" name="popup" after="-" template="Codilar_ProShopping::popup.phtml"/>
+            <block class="Codilar\ProShopping\Block\Contactblock" name="popup" after="-" template="Codilar_ProShopping::popup.phtml">
+                <arguments>
+                    <argument name="viewModel" xsi:type="object">Codilar\ProShopping\ViewModel\ProShop</argument>
+                </arguments>
+            </block>
         </referenceBlock>
         <referenceBlock name="contact-us-link" remove="true"/>
     </body>
