--- a/app/code/Codilar/ProShopping/view/frontend/templates/popup.phtml
+++ b/app/code/Codilar/ProShopping/view/frontend/templates/popup.phtml
@@ -1,7 +1,11 @@
 <?php
+    /** @var $block \Codilar\ProShopping\Block\Contactblock */
+
+    /** @var \Codilar\ProShopping\ViewModel\ProShop $viewModel */
+    $viewModel = $block->getData('viewModel');
+    $categoryList = $viewModel->getAllSystemCategory();
+
     if($this->isPopupEnabled() && $this->isContactEnabled()){
-
-
 ?>
 
 
@@ -13,89 +17,79 @@
         // Jquery Validation Library
         'jquery/ui' // Jquery UI Library
     ], function ($) {
-
-
-
-                $('#pop_button').click(function() {
-                 if($(this).css("margin-left") == "300px" || $(this).css("margin-left") == "280px")
-                {
-                    $('.popup').animate({"margin-left": '-=300'});
-                    $('#pop_button').animate({"margin-left": '-=280'});
-                }
-                else
-                {
-                    $('.popup').animate({"margin-left": '+=300'});
-                    $('#pop_button').animate({"margin-left": '+=280'});
-                }
-
-
+        $('#pop_button').click(function() {
+         if($(this).css("margin-left") == "300px" || $(this).css("margin-left") == "280px")
+        {
+            $('.popup').animate({"margin-left": '-=300'});
+            $('#pop_button').animate({"margin-left": '-=280'});
+        }
+        else
+        {
+            $('.popup').animate({"margin-left": '+=300'});
+            $('#pop_button').animate({"margin-left": '+=280'});
+        }
     });
 
-                $('#pop_button-right').click(function() {
+        $('#pop_button-right').click(function() {
 
 
-                if($(this).css("margin-right") == "300px" || $(this).css("margin-right") == "280px")
-                {
-                    $('.popup-right').animate({"margin-right": '-=300'});
-                    $('#pop_button-right').animate({"margin-right": '-=280'});
-                }
-                else
-                {
-                    $('.popup-right').animate({"margin-right": '+=300'});
-                    $('#pop_button-right').animate({"margin-right": '+=280'});
-                }
+        if($(this).css("margin-right") == "300px" || $(this).css("margin-right") == "280px")
+        {
+            $('.popup-right').animate({"margin-right": '-=300'});
+            $('#pop_button-right').animate({"margin-right": '-=280'});
+        }
+        else
+        {
+            $('.popup-right').animate({"margin-right": '+=300'});
+            $('#pop_button-right').animate({"margin-right": '+=280'});
+        }
     });
 
-
-     });
+    });
     function myFunction() {
         var exists = document.getElementById("g-recaptcha-response");
 
     if(exists == null){
             //alert('not exists');
     }
-    else{
-            var check = document.getElementById("g-recaptcha-response").value;
-           // alert(check);
-            if(check=='' || check == null){
-                document.getElementById("recaptcha").style.border = "1px solid #ea0e0e";
-                return false;
-            }
-            else{
-                document.getElementById("recaptcha").style.border = "none";
-                return true;
-            }
+    else {
+        var check = document.getElementById("g-recaptcha-response").value;
+       // alert(check);
+        if(check=='' || check == null){
+            document.getElementById("recaptcha").style.border = "1px solid #ea0e0e";
+            return false;
         }
-
-
+        else{
+            document.getElementById("recaptcha").style.border = "none";
+            return true;
+        }
+    }
 }
 
 </script>
 
-<div id="leftcontact" <?php if($this->popupposition() == 0) { echo "class=popup"; } else{ echo "class=popup-right"; }?> data-value="hide">
-<div id="bcontactForm" name="bMyform" class="block contactFormheader" style="width:253px;border:solid 0.1px;border-radius:5px;float:left;padding-left:0px;background:white;padding:10px;">
+<div id="leftcontact" <?php if($this->popupposition() == 0) { echo "class=popup"; } else{ echo "class=popup-right"; }?>
+     data-value="hide">
+<div id="bcontactForm" name="bMyform" class="block contactFormheader"
+     style="width:253px;border:solid 0.1px;border-radius:5px;float:left;padding-left:0px;background:white;padding:10px;">
 
-<form <?php echo "style=height:450px;overflow:auto;overflow-x:hidden"; ?> class="form contact"
-      action=""
-      id="contact-form"
-      name="contact-form"
-      onsubmit="return myFunction()"
-      method="post"
-      data-hasrequired="<?php /* @escapeNotVerified */ echo __('* Required Fields') ?>"
-      data-mage-init='{"validation":{}}'>
-    <fieldset class="fieldset">
-
-    </fieldset>
-
-</form>
+    <?php foreach ($categoryList->getItems() as $category) { ?>
+        <p><?php echo $category->getName(); ?></p>
+    <?php } ?>
 
 </div>
 </div>
 
-
-<div <?php if($this->popupposition() == 0) { echo "class=share_box"; } else{ echo "class=share_box-right"; }?> <?php if($this->popupposition() == 0) { echo "id=pop_button"; } else{ echo "id=pop_button-right"; }?>>
+<div <?php if($this->popupposition() == 0) {
+    echo "class=share_box";
+} else { echo "class=share_box-right";
+}?>
+    <?php if($this->popupposition() == 0) {
+        echo "id=pop_button"; }
+    else {
+        echo "id=pop_button-right";
+    }?>>
         <img src="<?php echo $this->getViewFileUrl('Codilar_ProShopping::images/tss-t.png'); ?>">
-
 </div>
 
 <?php } ?>
@@ -103,56 +97,62 @@
 <style type="text/css">
 
     #recaptcha {
-  display: inline-block;
-  position: relative;
+      display: inline-block;
+      position: relative;
+    }
 
+    .share_box{
+       position:fixed;
+        width:40px;
 
-}
+        left: 0px;
+        z-index: 1000;
+        top: 200px;
+        height: 155px;
+    }
+    .share_box-right{
+       position:fixed;
+        width:40px;
 
-.share_box{
-   position:fixed;
-    width:40px;
+        right: 0px;
+        z-index: 1000;
+        top: 200px;
+        height: 155px;
+    }
+    .rc-anchor-normal {
+        height: 74px;
+        width: 250px;
+    }
+    .popup{
+       position:fixed;
+        width:40px;
 
-    left: 0px;
-    z-index: 1000;
-    top: 200px;
-    height: 155px;
-}
-.share_box-right{
-   position:fixed;
-    width:40px;
+        left: 5px;
+        z-index: 1000;
+        top: 100px;
+        height: 155px;
+        margin-left: -300px;
+    }
+    .popup-right{
+       position:fixed;
+        width:40px;
 
-    right: 0px;
-    z-index: 1000;
-    top: 200px;
-    height: 155px;
-}
-.rc-anchor-normal {
-    height: 74px;
-    width: 250px;
-}
-
-.popup{
-   position:fixed;
-    width:40px;
-
-    left: 5px;
-    z-index: 1000;
-    top: 100px;
-    height: 155px;
-    margin-left: -300px;
-}
-
-.popup-right{
-   position:fixed;
-    width:40px;
-
-    right: 5px;
-    z-index: 1000;
-    top: 100px;
-    height: 155px;
-    margin-right: -65px;
-}
+        right: 5px;
+        z-index: 1000;
+        top: 100px;
+        height: 155px;
+        margin-right: -65px;
+    }
+    .contactFormheader{
+        width: 253px;
+        border: solid 0.1px;
+        border-radius: 5px;
+        float: left;
+        padding-left: 0px;
+        background: white;
+        padding: 10px;
+        height: 65vh;
+    }
 
 </style>
 
