--- a/app/code/Codilar/ProShopping/view/frontend/templates/popup.phtml
+++ b/app/code/Codilar/ProShopping/view/frontend/templates/popup.phtml
@@ -74,7 +74,7 @@
      style="width:253px;border:solid 0.1px;border-radius:5px;float:left;padding-left:0px;background:white;padding:10px;">
 
     <?php foreach ($categoryList->getItems() as $category) { ?>
-        <p><?php echo $category->getName(); ?></p>
+        <p class="category-link" data-category-id="<?php echo $category->getId(); ?>"><?php echo $category->getName(); ?></p>
     <?php } ?>
 
 </div>
@@ -156,5 +156,15 @@
 
 </style>
 
-
-
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $(document).ready(function () {
+        // Attach a click event listener to all elements with the class "category-link"
+        jQuery('.category-link').on('click', function () {
+            // Get the data-category-id attribute value of the clicked element
+            var categoryId = $(this).data('category-id');
+            // You can use the categoryId here as needed (e.g., send it to the server via AJAX, display it, etc.)
+            console.log('Clicked category ID:', categoryId);
+        });
+    });
+</script>
