--- a/app/code/Codilar/ProShopping/view/frontend/templates/popup.phtml
+++ b/app/code/Codilar/ProShopping/view/frontend/templates/popup.phtml
@@ -73,9 +73,13 @@
 <div id="bcontactForm" name="bMyform" class="block contactFormheader"
      style="width:253px;border:solid 0.1px;border-radius:5px;float:left;padding-left:0px;background:white;padding:10px;">
 
-    <?php foreach ($categoryList->getItems() as $category) { ?>
-        <p class="category-link" data-category-id="<?php echo $category->getId(); ?>"><?php echo $category->getName(); ?></p>
-    <?php } ?>
+    <div class="category-container">
+        <?php foreach ($categoryList->getItems() as $category) { ?>
+            <?php if ($category->getParentId()) { ?>
+                <p class="category-link" data-category-id="<?php echo $category->getId(); ?>"><?php echo $category->getName(); ?></p>
+            <?php } ?>
+        <?php } ?>
+    </div>
 
 </div>
 </div>
@@ -154,16 +158,32 @@
         height: 65vh;
     }
 
+    .category-link{
+        cursor: pointer;
+    }
+
+    .category-container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 15px;
+        padding: 10px;
+        align-items: stretch;
+    }
+
+    .category-link {
+        background-color: #656c7d;
+        color: white;
+        padding: 10px;
+        text-align: center;
+    }
+
 </style>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
     $(document).ready(function () {
-        // Attach a click event listener to all elements with the class "category-link"
         jQuery('.category-link').on('click', function () {
-            // Get the data-category-id attribute value of the clicked element
             var categoryId = $(this).data('category-id');
-            // You can use the categoryId here as needed (e.g., send it to the server via AJAX, display it, etc.)
             console.log('Clicked category ID:', categoryId);
         });
     });
