--- a/app/code/Codilar/ProShopping/view/frontend/templates/popup.phtml
+++ b/app/code/Codilar/ProShopping/view/frontend/templates/popup.phtml
@@ -1,5 +1,5 @@
 <?php
-    /** @var $block \Codilar\ProShopping\Block\Contactblock */
+    /** @var $block \Codilar\ProShopping\Block\ShoppingBlock */
 
     /** @var \Codilar\ProShopping\ViewModel\ProShop $viewModel */
     $viewModel = $block->getData('viewModel');
