--- a/app/code/Codilar/ProShopping/view/frontend/layout/default.xml
+++ b/app/code/Codilar/ProShopping/view/frontend/layout/default.xml
@@ -11,6 +11,6 @@
                 </arguments>
             </block>
         </referenceBlock>
-        <referenceBlock name="contact-us-link" remove="true"/>
+<!--        <referenceBlock name="contact-us-link" remove="true"/>-->
     </body>
 </page>
