--- a/app/code/Codilar/ProShopping/view/frontend/templates/popup.phtml
+++ b/app/code/Codilar/ProShopping/view/frontend/templates/popup.phtml
@@ -5,8 +5,8 @@
     $viewModel = $block->getData('viewModel');
     $categoryList = $viewModel->getAllSystemCategory();
 
-    if($this->isPopupEnabled() && $this->isContactEnabled()){
-?>
+    if ($this->isPopupEnabled() && $this->isContactEnabled()) {
+        ?>
 
 
 <script type="text/javascript">
@@ -68,7 +68,11 @@
 
 </script>
 
-<div id="leftcontact" <?php if($this->popupposition() == 0) { echo "class=popup"; } else{ echo "class=popup-right"; }?>
+<div id="leftcontact" <?php if ($this->popupposition() == 0) {
+            echo "class=popup";
+        } else {
+            echo "class=popup-right";
+        } ?>
      data-value="hide">
 <div id="bcontactForm" name="bMyform" class="block contactFormheader">
 
@@ -85,19 +89,21 @@
 </div>
 </div>
 
-<div <?php if($this->popupposition() == 0) {
-    echo "class=share_box";
-} else { echo "class=share_box-right";
-}?>
-    <?php if($this->popupposition() == 0) {
-        echo "id=pop_button"; }
-    else {
-        echo "id=pop_button-right";
-    }?>>
+<div <?php if ($this->popupposition() == 0) {
+            echo "class=share_box";
+        } else {
+            echo "class=share_box-right";
+        } ?>
+    <?php if ($this->popupposition() == 0) {
+            echo "id=pop_button";
+        } else {
+            echo "id=pop_button-right";
+        } ?>>
         <img src="<?php echo $this->getViewFileUrl('Codilar_ProShopping::images/tss-t.png'); ?>">
 </div>
 
-<?php } ?>
+<?php
+    } ?>
 
 <style type="text/css">
 
