--- a/app/code/Codilar/ProShopping/view/frontend/web/css/codilar_proshopping.less
+++ b/app/code/Codilar/ProShopping/view/frontend/web/css/codilar_proshopping.less
@@ -63,12 +63,15 @@
 
 .category-link {
     cursor: pointer;
-    background-color: @background-color;
     color: white;
     padding: 10px;
     text-align: center;
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+    background-color: #566573;
     border-radius: 5px;
+    box-shadow: rgba(17, 17, 26, 0.05) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
+    backdrop-filter: blur(4.8px);
+    -webkit-backdrop-filter: blur(4.8px);
+    border: 1px solid rgba(46, 67, 75, 0.03);
 }
 
 #bcontactForm {
@@ -81,6 +84,28 @@
     gap: 15px;
     padding: 10px;
     align-items: stretch;
+}
+
+.product-item{
+    display: flex;
+    box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
+    margin: 10px;
+    height: 90px;
+}
+
+.recomend-product-item{
+    display: flex;
+}
+.recomend-product-img{
+    width: 80px;
+    height: auto;
+    padding: 2px;
+}
+
+.recomend-product-details{
+    padding-left: 8px;
+    padding-top: 20px;
+
 }
 
 body {
