--- a/app/code/Codilar/ProShopping/view/frontend/templates/popup.phtml
+++ b/app/code/Codilar/ProShopping/view/frontend/templates/popup.phtml
@@ -148,7 +148,7 @@
                 productDiv.innerHTML = `
             <img class="recomend-product-img" src="${product.image}" alt="${product.sku}" />
             <div class="recomend-product-details">
-                    <p class="recomend-product-sku">Sku: ${product.name}</p>
+                    <p class="recomend-product-sku">Sku: ${product.sku}</p>
                     <p class="recomend-product-price">Price: ${Math.round(product.price)}</p>
             </div>
         `;
