Updated Store configuration

--- a/app/code/Codilar/ProShopping/view/frontend/templates/popup.phtml
+++ b/app/code/Codilar/ProShopping/view/frontend/templates/popup.phtml
@@ -77,6 +77,10 @@
      data-value="hide">
 <div id="bcontactForm" name="bMyform" class="block contactFormheader">
 
+    <?php if ($viewModel->getWelcomeMessageEnabled()) { ?>
+        <h2><?php $viewModel->getWelcomeMessage() ?></h2>
+    <?php } ?>
+
     <div class="category-container">
         <?php foreach ($products as $single) { ?>
                 <p class="category-link"><?php echo $single['name'] ?></p>
