--- a/app/code/Codilar/ProShopping/view/frontend/templates/popup.phtml
+++ b/app/code/Codilar/ProShopping/view/frontend/templates/popup.phtml
@@ -78,7 +78,7 @@
 <div id="bcontactForm" name="bMyform" class="block contactFormheader">
 
     <?php if ($viewModel->getWelcomeMessageEnabled()) { ?>
-        <h2><?php $viewModel->getWelcomeMessage() ?></h2>
+        <h2><?php echo $viewModel->getWelcomeMessage() ?></h2>
     <?php } ?>
 
     <div class="category-container">
