--- a/app/code/Codilar/ProShopping/view/frontend/templates/popup.phtml
+++ b/app/code/Codilar/ProShopping/view/frontend/templates/popup.phtml
@@ -79,6 +79,7 @@
 
     <?php if ($viewModel->getWelcomeMessageEnabled()) { ?>
         <h2><?php echo $viewModel->getWelcomeMessage() ?></h2>
+        <h3><?php echo $viewModel->getConfirmMessage() ?></h3>
     <?php } ?>
 
     <div class="category-container">
