code added for pop-up

--- a/app/code/Codilar/ProShopping/view/frontend/templates/popup.phtml
+++ b/app/code/Codilar/ProShopping/view/frontend/templates/popup.phtml
@@ -80,6 +80,8 @@
     <?php if ($viewModel->getWelcomeMessageEnabled()) { ?>
         <h2><?php echo $viewModel->getWelcomeMessage() ?></h2>
         <h3><?php echo $viewModel->getConfirmMessage() ?></h3>
+        <button id="yes">Yes</button>
+        <button id="no">No</button>
     <?php } ?>
 
     <div class="category-container">
