--- a/app/code/Codilar/ProShopping/view/frontend/web/css/codilar_proshopping.less
+++ b/app/code/Codilar/ProShopping/view/frontend/web/css/codilar_proshopping.less
@@ -86,6 +86,13 @@
     align-items: stretch;
 }
 
+.green-button {
+    background-color: #4CAF50; /* Green color */
+    color: white; /* Text color */
+    border: none; /* Remove button border */
+    border-radius: 4px; /* Add rounded corners */
+}
+
 .product-item{
     display: flex;
     box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
