--- a/app/code/Codilar/ProShopping/view/frontend/web/css/codilar_proshopping.less
+++ b/app/code/Codilar/ProShopping/view/frontend/web/css/codilar_proshopping.less
@@ -320,6 +320,17 @@ body {
     max-width: 100%;
 }
 
+/* Add your custom CSS styles here */
+#bcontactForm {
+    /* Set a fixed height for the div */
+    height: 600px;
+    /* Add overflow-y property to enable vertical scrolling */
+    overflow-y: scroll;
+    /* Add any other desired styles for the div */
+    border: 1px solid #ccc;
+    padding: 10px;
+}
+
 /*responsive*/
 
 @media (min-width: 200px) and (max-width: 650px) {
