--- a/app/code/Codilar/ProShopping/view/frontend/templates/popup.phtml
+++ b/app/code/Codilar/ProShopping/view/frontend/templates/popup.phtml
@@ -79,8 +79,8 @@
     <?php if ($viewModel->getWelcomeMessageEnabled()) { ?>
         <h2><?php echo $viewModel->getWelcomeMessage() ?></h2>
         <h3><?php echo $viewModel->getConfirmMessage() ?></h3>
-        <button id="yes">Yes</button>
-        <button onclick='document.getElementById("message").innerHTML = "Thank You!"'>No</button>
+        <button id="yes">Purchase</button>
+        <button onclick='document.getElementById("message").innerHTML = "Order History feature will be developed after winning this Hackathon!"'>Check Order History</button>
         <h2 id="message"></h2>
     <?php } ?>
 
@@ -88,9 +88,10 @@
     <div id="budget-div" style="display: none;">
         <label for="budget">What is your budget?</label>
         <div>
-            <button class="budget-button" data-budget="15000">15k</button>
-            <button class="budget-button" data-budget="5000">5k</button>
-            <button class="budget-button" data-budget="10000">10k</button>
+            <button class="budget-button" data-budget="5000">0-5k</button>
+            <button class="budget-button" data-budget="10000">5k-10k</button>
+            <button class="budget-button" data-budget="20000">10k-20k</button>
+            <button class="budget-button" data-budget="80000">20k-More</button>
         </div>
     </div>
     <!-- New div to display products -->
