--- a/app/code/Codilar/ProShopping/view/frontend/templates/popup.phtml
+++ b/app/code/Codilar/ProShopping/view/frontend/templates/popup.phtml
@@ -128,6 +128,8 @@
         let categories;
         $('#yes').on('click', function () {
             let categoryUrl = "<?= $viewModel->getCategoryUrl() ?>";
+            //disable button after click
+            $('#yes').prop('disabled', true);
             $.ajax({
                 url: categoryUrl,
                 type: 'POST',
@@ -152,6 +154,7 @@
 
                         // Hide the budget buttons after selecting the budget
                         $('#budget-div').hide();
+
 
                         // Continue with the AJAX request and display products
                         let products;
