--- a/app/code/Codilar/ProShopping/view/frontend/web/css/codilar_proshopping.less
+++ b/app/code/Codilar/ProShopping/view/frontend/web/css/codilar_proshopping.less
@@ -62,16 +62,41 @@
 }
 
 .category-link {
+    align-items: center;
+    background-image: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
+    border: 0;
+    border-radius: 8px;
+    box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    display: flex;
+    font-family: Phantomsans, sans-serif;
+    font-size: 20px;
+    justify-content: center;
+    line-height: 1em;
+    max-width: 58%;
+    min-width: 104px !important;
+    padding: 12px 15px;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
     cursor: pointer;
-    color: white;
-    padding: 10px;
-    text-align: center;
-    background-color: #566573;
-    border-radius: 5px;
-    box-shadow: rgba(17, 17, 26, 0.05) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
-    backdrop-filter: blur(4.8px);
-    -webkit-backdrop-filter: blur(4.8px);
-    border: 1px solid rgba(46, 67, 75, 0.03);
+    width: 10px;
+    height: 50px;
+}
+
+.category-link:active,
+.category-link:hover {
+    outline: 0;
+}
+
+@media (min-width: 768px) {
+    .category-link {
+        font-size: 24px;
+        min-width: 196px;
+    }
 }
 
 #bcontactForm {
@@ -112,6 +137,57 @@
 .recomend-product-details{
     padding-left: 8px;
     padding-top: 20px;
+}
+
+.confirm-button {
+    margin: 10px;
+    padding: 15px 30px;
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;
+    border-radius: 10px;
+    display: block;
+    border: 0px;
+    font-weight: 700;
+    box-shadow: 0px 0px 14px -7px #f09819;
+    background-image: linear-gradient(45deg, #FF512F 0%, #F09819  51%, #FF512F  100%);
+    cursor: pointer;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: 95%;
+    margin-top: 10px;
+}
+
+.confirm-button:hover {
+    background-position: right center;
+    /* change the direction of the change here */
+    color: #fff;
+    text-decoration: none;
+}
+
+.confirm-button:active {
+    transform: scale(0.95);
+}
+
+.welcome-message {
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 34px;
+    color: #e0b08b;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+    margin-bottom: 19px;
+    animation: rainbow-text 5s infinite;
+}
+
+/* Hover effect */
+.welcome-text:hover {
+    color: #ff5722;
+    text-shadow: 2px 2px 4px rgba(255, 87, 34, 0.2);
 }
 
 body {
