--- a/app/code/Codilar/ProShopping/view/frontend/templates/popup.phtml
+++ b/app/code/Codilar/ProShopping/view/frontend/templates/popup.phtml
@@ -88,10 +88,10 @@
     <div id="budget-div" style="display: none;">
         <label for="budget">What is your budget?</label>
         <div>
-            <button class="budget-button" data-budget="5000">0-5k</button>
-            <button class="budget-button" data-budget="10000">5k-10k</button>
-            <button class="budget-button" data-budget="20000">10k-20k</button>
-            <button class="budget-button" data-budget="80000">20k-More</button>
+            <button class="budget-button" data-budget="0-5000">0-5k</button>
+            <button class="budget-button" data-budget="5000-10000">5k-10k</button>
+            <button class="budget-button" data-budget="10000-20000">10k-20k</button>
+            <button class="budget-button" data-budget="20000-more">20k-More</button>
         </div>
     </div>
     <!-- New div to display products -->
